Xwayland 24.1 breaks Serious Editor; Window renders all black.
After upgrading to Xwayland 24.1, Serious Editor, a modding tool for Serious Engine games (Talos Principle 1 and Serious Sam), no longer functions properly.
I'm running KDE on Arch Linux. With Xwayland 23.2.7, the application worked well. However, after upgrading to Xwayland 24.1, it fails to render beyond the splash screen. You can still access the menus on top but main window is all black.
I bisected the code and found that the commit introducing the issue is "xwayland: Add xwl_window::surface_window" 3a0fc268
Here's a video showing normal behavior (last good commit db248682)
And here's a video showing the issue after commit 3a0fc268
Notes:
- The application still run in GNOME, but it breaks completely in KDE. I didn't test other environments.
- It requires childwindow support to run.
- Trying different Proton versions gives the same result.
Thank you very much for your attention.